--- a/plot.convenience/DESCRIPTION
+++ b/plot.convenience/DESCRIPTION
@@ -1,8 +1,12 @@
 Package: plot.convenience
 Title: Conveneince functions for plotting
-Version: 0.0.0.01
-Authors@R: person("Ronny", "Restrepo", , "ronny.coding@gmail.com", role = c("aut", "cre"))
+Version: 0.1.1
+Date: 2015-05-29
+Authors: Ronny Restrepo
+Maintainer: Ronny Restrepo <ronny.coding@gmail.com>
 Description: Convenience functions for plotting 
 Depends: R (>= 3.1.0)
 License: GPL v2
 LazyData: true
+Imports: 
+    Hmisc
