Add plot_models() function

--- a/plot.convenience/NAMESPACE
+++ b/plot.convenience/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(plot.cols)
 export(plot_distribution)
+export(plot_models)
 export(plot_surrounding_residuals)
 export(shade_between)
 export(shade_outside)
