Add to_gradient() to plot.convenience

--- a/plot.convenience/NAMESPACE
+++ b/plot.convenience/NAMESPACE
@@ -9,6 +9,7 @@ export(plot_residuals)
 export(plot_surrounding_residuals)
 export(shade_between)
 export(shade_outside)
+export(to_gradient)
 import(Hmisc)
 import(manipulate)
 import(scales)
