Add plot_by_cat() in plot.convenience()

--- a/plot.convenience/NAMESPACE
+++ b/plot.convenience/NAMESPACE
@@ -3,6 +3,7 @@
 export(int_pairs)
 export(int_plot.cols)
 export(plot.cols)
+export(plot_by_cat)
 export(plot_distribution)
 export(plot_models)
 export(plot_residuals)
